--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "react-scripts": "3.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "npm install && npm run build"
+    "heroku-postbuild": "npm install && npm run build",
+    "start": "npm install -g serve && serve -s build"
   },
   "eslintConfig": {
     "extends": "react-app"
